# SlicerSegmentMesher

./: CMakeLists.txt  CTestConfig.cmake  README.md  SlicerSegmentMesher.xcf  SuperBuild.cmake
SegmentMesher/: CMakeLists.txt  SegmentMesher.py
SegmentMesher/Resources/UI/: SegmentMesher.ui
SuperBuild/: External_cleaver.cmake  External_tetgen.cmake
